Updated dungeon and gameobject files to allow for movement of PC. Still have issue with properly generating rooms. Commented it out in Dungeon constructor for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ project(rougelike)
 
 set(CMAKE_CXX_STANDARD 11)
 link_libraries(ncurses)
-set(SOURCE_FILES main.cpp game_objects dungeon)
+file(GLOB gameobjsrc RELATIVE "game_objects" "*.cpp")
+file(GLOB gameobjsrc RELATIVE "game_objects" "*.h")
+file(GLOB dungeonsrc RELATIVE "dungeon" "*.cpp")
+
+set(SOURCE_FILES main.cpp ${gameobjsrc} ${dungeonsrc})
 add_executable(rougelike ${SOURCE_FILES})
