Updated makefile and project layout to coincide with proper project and GNUmake structure. Added .gitkeep files in both bin and obj to preserve project structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,5 @@ file(GLOB gameobjsrc RELATIVE "game_objects" "*.cpp")
 file(GLOB gameobjsrc RELATIVE "game_objects" "*.h")
 file(GLOB dungeonsrc RELATIVE "dungeon" "*.cpp")
 
-set(TESTNC demo.cc)
-add_executable(testnc ${TESTNC})
-set(SOURCE_FILES main.cpp ${gameobjsrc} ${dungeonsrc} main.h RougeLike.cpp RougeLike.h PC.cpp PC.h Floor.cpp Floor.h)
+set(SOURCE_FILES src/main.cpp ${gameobjsrc} ${dungeonsrc} include/main.h src/RougeLike.cpp include/RougeLike.h src/PC.cpp include/PC.h src/Floor.cpp include/Floor.h include/stdef.h src/Cell.cpp include/Cell.h)
 add_executable(rougelike ${SOURCE_FILES})
