Revamped movement to be based around each cell, PC can be moved to occupy a cell, and call the respective unoccupy() method on the cell upon leaving. These can be expanded to add things like checking if particular characters are allowed to move to certain spaces. Still need to make sure PC is keeping track of its x and y locations now however.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(rougelike)
 
 set(CMAKE_CXX_STANDARD 11)
 link_libraries(ncurses)
-set(SOURCE_FILES src/main.cpp include/main.h src/RougeLike.cpp include/RougeLike.h src/PC.cpp include/PC.h src/Floor.cpp include/Floor.h include/stdef.h src/Cell.cpp include/Cell.h)
+set(SOURCE_FILES src/main.cpp include/main.h src/RougeLike.cpp include/RougeLike.h src/PC.cpp include/PC.h src/Floor.cpp include/Floor.h include/stdef.h src/Cell.cpp include/Cell.h include/Drawable.cpp include/Drawable.h)
 add_executable(rougelike ${SOURCE_FILES})
